--- a/res/src/ng-modules/chayka-forms.less
+++ b/res/src/ng-modules/chayka-forms.less
@@ -10,6 +10,9 @@
         width: @label-width;
         position: absolute;
         padding-right: 1ex;
+
+    }
+    label{
         min-height: 32px;
         line-height: 32px;
         font-size: 16px;
@@ -58,6 +61,20 @@
         label[for]{
 
         }
+    }
+
+    &.radio{
+        label{
+            white-space: nowrap;
+        }
+        .input{
+            padding-top: 1px;
+            label{
+                display: inline-block;
+                margin-right: 1ex;
+            }
+        }
+
     }
 
     &.progress > .input{
