--- a/res/src/ng-modules/chayka-wp-admin.less
+++ b/res/src/ng-modules/chayka-wp-admin.less
@@ -49,26 +49,6 @@
             }
 
         }
-        .form_field.radio{
-            > .input {
-                padding-top: 5px;
-                label {
-                    display: inline;
-                    float: none;
-                    font-size: 16px;
-                    line-height: 32px;
-                    min-height: 32px;
-                    white-space: nowrap;
-                    padding-right: 1em;
-
-                    input[type=radio] {
-                        display: inline;
-                        float: none;
-
-                    }
-                }
-            }
-        }
         .form_field.fullsize{
             > label{
                 display: block;
@@ -102,6 +82,31 @@
             }
             > .message{
 
+            }
+        }
+        .form_field.radio{
+            > .input {
+                padding-top: 5px;
+                label {
+                    display: inline;
+                    float: none;
+                    font-size: 16px;
+                    line-height: 32px;
+                    min-height: 32px;
+                    white-space: nowrap;
+                    padding-right: 1em;
+
+                    input[type=radio] {
+                        display: inline;
+                        float: none;
+
+                    }
+                }
+            }
+        }
+        .form_field.checkbox{
+            >label{
+                display: none;
             }
         }
     }
