Minor fixes for comments to run

--- a/res/src/ng-modules/chayka-forms.css
+++ b/res/src/ng-modules/chayka-forms.css
@@ -61,9 +61,13 @@
 .form_field.progress > .input input[type=email],
 .form_field.progress > .input input[type=search],
 .form_field.progress > .input input[type=tel],
-.form_field.progress > .input input[type=url] {
-  background: url(../img/spinner32x32.gif) no-repeat 98% 50%;
+.form_field.progress > .input input[type=url],
+.form_field.progress > .input textarea {
+  background: url(../img/spinner32x32.gif) no-repeat 99% 50%;
   background-size: 16px 16px;
+}
+.form_field.progress > .input textarea {
+  background-position: 99% 4px;
 }
 .form_field > .message {
   min-height: 1em;
