--- a/res/src/ng-modules/chayka-forms.less
+++ b/res/src/ng-modules/chayka-forms.less
@@ -84,10 +84,13 @@
         input[type=email],
         input[type=search],
         input[type=tel],
-        input[type=url]{
-            background: ~'url(../img/spinner32x32.gif)' no-repeat 98% 50%;
+        input[type=url],
+        textarea{
+            background: ~'url(../img/spinner32x32.gif)' no-repeat 99% 50%;
             background-size: 16px 16px;
-
+        }
+        textarea{
+            background-position: 99% 4px;
         }
     }
 
