--- a/res/src/ng-modules/chayka-forms.less
+++ b/res/src/ng-modules/chayka-forms.less
@@ -77,6 +77,12 @@
 
     }
 
+    &.fullsize.checkbox{
+        & > label{
+            display: none;
+        }
+    }
+
     &.progress > .input{
         input[type=text],
         input[type=password],
