--- a/app/views/admin/index.phtml
+++ b/app/views/admin/index.phtml
@@ -23,6 +23,10 @@
 			        JPG or PNG 100x100
 		        </div>
 	        </div>
+	        <div class="form_field stretch color_picker" data-form-field="themeBaseColor">
+		        <label class="width50">Theme base color</label><input type="color" data-ng-init="options.themeBaseColor='#000000'" data-ng-model="options.themeBaseColor" data-default-color="#000000" data-color-picker title="Theme base color"/>
+	        </div>
+
 	        <!-- chayka: fields -->
             <div class="buttons">
                 <button class="button button-primary button-large" data-ng-click="saveOptions();">Save</button>
