--- a/res/src/ng-modules/chayka-wp-admin.less
+++ b/res/src/ng-modules/chayka-wp-admin.less
@@ -423,3 +423,78 @@ body, html{
 //        }
 //    }
 }
+
+.form_field.color_picker{
+    & > .input{
+        position: relative;
+        min-height: 32px;
+        & > .wp-picker-container{
+            position: absolute;
+            z-index: 10;
+
+            & > .wp-color-result{
+                line-height: 16px;
+                min-height: 32px;
+                &::after{
+                    font-size: 14px;
+                    line-height: 30px;
+                    min-height: 32px;
+                }
+                &.wp-picker-open + .wp-picker-input-wrap{
+                    display: inline-block;
+                }
+            }
+            & > .wp-picker-input-wrap{
+                width: 257px;
+                padding: 10px;
+                background-color: #ffffff;
+                border: 1px solid #dfdfdf;
+                box-sizing: border-box;
+                display: none;
+
+                & > input.wp-color-picker{
+                    width: 85px;
+                    float: left;
+                    font-size: 16px;
+                    line-height: 16px;
+                    padding: 0 5px;
+                }
+                & > input.button{
+//                    width: 48%;
+                    font-size: 16px;
+                    line-height: 16px;
+                    min-height: 32px;
+                    float: right;
+                    padding: 0 8px 1px;
+                }
+            }
+            & > .wp-picker-holder{
+
+            }
+        }
+    }
+    &.stretch > .input{
+        & > .wp-picker-container{
+            right: 0;
+            & > .wp-color-result{
+                float: right;
+                margin-right: 0;
+            }
+            & > .wp-picker-input-wrap{
+                clear: both;
+                & > input.wp-color-picker{
+
+                }
+                & > input.button{
+
+                }
+            }
+            & > .wp-picker-holder{
+
+            }
+        }
+    }
+    &.fullsize > .input{
+
+    }
+}
