--- a/res/src/ng-modules/chayka-wp-admin.css
+++ b/res/src/ng-modules/chayka-wp-admin.css
@@ -4,6 +4,12 @@
 .form_field > label {
   padding-top: 4px;
 }
+.form_field > .message.error {
+  border: none;
+  box-shadow: none;
+  margin: 0;
+  padding: 0;
+}
 #postbox-container-1 .postbox .form_field > label,
 #postbox-container-2 .postbox .form_field > label {
   cursor: auto;
@@ -99,8 +105,9 @@ html {
 .chayka-media_picker.multiple .media_items .as-sortable-placeholder {
   margin: 2px;
   background-size: cover;
+  background-color: #e6e6e6;
   background-color: rgba(0, 0, 0, 0.1);
-  display: inline-block;
+  display: block;
   float: left;
   border: 1px solid #888;
   box-sizing: border-box;
@@ -134,6 +141,7 @@ html {
   min-height: 100px;
   padding: 0;
   overflow: hidden;
+  background-color: #f0f0f0;
   background-color: rgba(0, 0, 0, 0.05);
   line-height: normal;
 }
@@ -170,6 +178,7 @@ html {
   top: 45%;
 }
 .chayka-media_picker > .no_image > [data-spinner] .chayka-spinner {
+  background-color: #c8c8c8;
   background-color: rgba(255, 255, 255, 0.8);
   padding: 5px 5px 5px 35px;
   border-radius: 3px;
