--- a/app/views/chayka-ng.phtml
+++ b/app/views/chayka-ng.phtml
@@ -1,9 +1,31 @@
 <?php $ngQueue = Chayka\WP\Helpers\AngularHelper::getQueue();
-if(count($ngQueue)): wp_print_scripts();?>
+if(count($ngQueue)): //wp_print_scripts();?>
 <script>
-	(function($){
+    (function($){
 		$(document).ready(function(){
+<?php if(is_admin()): ?>
+            /**
+             * This is a fix for wp-admin forms to work, otherwise angular
+             * makes event.preventDefault();
+             * we add 'action' attribute to forms that do not contain ng-click and ng-submit
+             */
+            $('form:not([action])').each(function(){
+                /**
+                 * @var {Element}form
+                 */
+                var form = this;
+                if(!form.querySelectorAll('[ng-click], [data-ng-click]').length
+                    && !form.hasAttribute('ng-submit')
+                    && !form.hasAttribute('ng-submit')
+                ){
+                    form.setAttribute('action', '');
+                }
+//                attr('action', '');
+            });
+<?php endif;?>
+//			'chayka-translate', 'chayka-buttons', 'chayka-utils', 'chayka-modals', 'chayka-spinners', 'chayka-ajax', 'chayka-forms', 'chayka-avatars', 'chayka-auth'
 			window.angular.bootstrap(document.body, ['<?php echo join("', '", $ngQueue);?>']);
+//			window.angular.bootstrap(document.body, ['chayka-nls']);
 		});
 	}(window.jQuery));
 </script>
